target/release/build/eyre-ef0a3d0b4a0d8cf1/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> C:\Users\Alex\Documents\agenda\target\release\build\eyre-ef0a3d0b4a0d8cf1\out\probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
